cmake_minimum_required(VERSION 3.19)

set(TABGRAPH_BINARY_DATA_SOURCE_FILES
  ${CMAKE_CURRENT_SOURCE_DIR}/BinaryData.cpp)

add_library(TabGraph-Assets-Parsers-BinaryData ${TABGRAPH_BINARY_DATA_SOURCE_FILES})
target_link_libraries(TabGraph-Assets-Parsers-BinaryData TabGraph::Assets)

set_target_properties(
  TabGraph-Assets-Parsers-BinaryData
  PROPERTIES FOLDER "TabGraph/Assets/Parsers"
)

set(TABGRAPH_PARSER_LIBS ${TABGRAPH_PARSER_LIBS} TabGraph-Assets-Parsers-BinaryData PARENT_SCOPE)
set(TABGRAPH_PARSER_FUNCTIONS ${TABGRAPH_PARSER_FUNCTIONS} "ParseBinaryData" PARENT_SCOPE)
#Mime-Extension
set(TABGRAPH_PARSER_MIME_EXTENSION0 ${TABGRAPH_PARSER_MIME_EXTENSION0} "application/octet-stream" PARENT_SCOPE)
set(TABGRAPH_PARSER_MIME_EXTENSION1 ${TABGRAPH_PARSER_MIME_EXTENSION1} ".bin" PARENT_SCOPE)

set(TABGRAPH_PARSER_MIME_FUNCTION0 ${TABGRAPH_PARSER_MIME_FUNCTION0} "application/octet-stream" PARENT_SCOPE)
set(TABGRAPH_PARSER_MIME_FUNCTION1 ${TABGRAPH_PARSER_MIME_FUNCTION1} "ParseBinaryData" PARENT_SCOPE)