cmake_minimum_required(VERSION 3.19)

set(TABGRAPH_GLTF_DATA_SOURCE_FILES
  ${CMAKE_CURRENT_SOURCE_DIR}/HDR.cpp)

add_library(TabGraph-Assets-Parsers-HDR ${TABGRAPH_GLTF_DATA_SOURCE_FILES})
target_link_libraries(TabGraph-Assets-Parsers-HDR
  TabGraph::Assets)

set_target_properties(
  TabGraph-Assets-Parsers-HDR
  PROPERTIES FOLDER "TabGraph/Assets/Parsers"
)

set(TABGRAPH_PARSER_LIBS ${TABGRAPH_PARSER_LIBS} TabGraph-Assets-Parsers-HDR PARENT_SCOPE)

#Mime-Extension
set(TABGRAPH_PARSER_MIME_EXTENSION0 ${TABGRAPH_PARSER_MIME_EXTENSION0} "image/vnd.radiance" PARENT_SCOPE)
set(TABGRAPH_PARSER_MIME_EXTENSION1 ${TABGRAPH_PARSER_MIME_EXTENSION1} ".hdr" PARENT_SCOPE)

set(TABGRAPH_PARSER_MIME_FUNCTION0 ${TABGRAPH_PARSER_MIME_FUNCTION0} "image/vnd.radiance" PARENT_SCOPE)
set(TABGRAPH_PARSER_MIME_FUNCTION1 ${TABGRAPH_PARSER_MIME_FUNCTION1} "ParseHDR" PARENT_SCOPE)