FetchContent_Declare(
    STB
    GIT_REPOSITORY https://github.com/nothings/stb.git
)
FetchContent_MakeAvailable(STB)
set(STB_INCLUDE_DIR "${stb_SOURCE_DIR}")

set(TABGRAPH_GLTF_STB_SOURCE_FILES
  ${CMAKE_CURRENT_SOURCE_DIR}/STBImage.cpp)
add_library(TabGraph-Assets-Parsers-STBImage ${TABGRAPH_GLTF_STB_SOURCE_FILES})
target_link_libraries(TabGraph-Assets-Parsers-STBImage TabGraph::Assets)
target_include_directories(TabGraph-Assets-Parsers-STBImage PRIVATE
  "${CMAKE_CURRENT_SOURCE_DIR}/include"
  "${STB_INCLUDE_DIR}")

set_target_properties(
  TabGraph-Assets-Parsers-STBImage
  PROPERTIES FOLDER "TabGraph/Assets/Parsers"
)

set(TABGRAPH_PARSER_LIBS ${TABGRAPH_PARSER_LIBS} TabGraph-Assets-Parsers-STBImage PARENT_SCOPE)

#Mime-Extension
set(TABGRAPH_PARSER_MIME_EXTENSION0 ${TABGRAPH_PARSER_MIME_EXTENSION0} "image/jpeg")
set(TABGRAPH_PARSER_MIME_EXTENSION1 ${TABGRAPH_PARSER_MIME_EXTENSION1} ".jpg")
set(TABGRAPH_PARSER_MIME_EXTENSION0 ${TABGRAPH_PARSER_MIME_EXTENSION0} "image/jpeg")
set(TABGRAPH_PARSER_MIME_EXTENSION1 ${TABGRAPH_PARSER_MIME_EXTENSION1} ".jpeg")
set(TABGRAPH_PARSER_MIME_EXTENSION0 ${TABGRAPH_PARSER_MIME_EXTENSION0} "image/x-png" PARENT_SCOPE)
set(TABGRAPH_PARSER_MIME_EXTENSION1 ${TABGRAPH_PARSER_MIME_EXTENSION1} ".png" PARENT_SCOPE)

set(TABGRAPH_PARSER_MIME_FUNCTION0 ${TABGRAPH_PARSER_MIME_FUNCTION0} "image/jpeg")
set(TABGRAPH_PARSER_MIME_FUNCTION1 ${TABGRAPH_PARSER_MIME_FUNCTION1} "ParseSTBImage")
set(TABGRAPH_PARSER_MIME_FUNCTION0 ${TABGRAPH_PARSER_MIME_FUNCTION0} "image/x-png" PARENT_SCOPE)
set(TABGRAPH_PARSER_MIME_FUNCTION1 ${TABGRAPH_PARSER_MIME_FUNCTION1} "ParseSTBImage" PARENT_SCOPE)